--- a/src/Header.css
+++ b/src/Header.css
@@ -1,34 +1,23 @@
 Header {
-  background-color: red;
+  background-color: rgb(173, 104, 104);
   height: 12.5vh; /* 1/8 of the viewport height */
   display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%
-  
+  align-items: flex-end;
+  justify-content: flex-end;
+  width: 95%;  
 }
 
-h1 {
-  color: rgb(16, 233, 74); /* Optional: Change text color for better visibility */
-}
 
-.nav-list {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  display: flex;
-}
 
 .nav-button {
   display: inline-block;
-  padding: 2vh 4vh; /* Set the height and width using viewport height (vh) */
+  padding: 1vh 3vh; /* Set the height and width using viewport height (vh) */
   text-decoration: none;
-  color: white;
-  background-color: #333; /* Button background color */
+  color: rgb(5, 4, 4);
   border: none;
   border-radius: 5px;
   font-weight: bold;
-  font-size: 2em; /* Set the font size using viewport height (vh) */
+  font-size: 1em; /* Set the font size using viewport height (vh) */
   cursor: pointer;
   transition: background-color 0.3s ease; /* Smooth transition on hover */
 
@@ -40,17 +29,6 @@ h1 {
     display: none; /* Hide the regular nav list on smaller screens */
   }
 
-  .hamburger-menu {
-    display: flex;
-    align-items: center;
-  }
-
-  .hamburger-icon {
-    font-size: 24px;
-    cursor: pointer;
-    margin-right: 20px;
-  }
-
   .nav-button {
     margin-right: 0; /* Remove margin for buttons in the hamburger menu */
   }
@@ -58,5 +36,5 @@ h1 {
 
 
 .nav-button:hover {
-  background-color: #555; /* Button background color on hover */
+  color:blue
 }
