--- a/src/OverlayMenu.css
+++ b/src/OverlayMenu.css
@@ -1,34 +1,22 @@
-.hamburger-icon {
-  font-size: 2em;
-  color: rgb(12, 8, 8);
-  cursor: pointer;
-  max-height: 20vh;
-  min-height: 10vh;
-  margin-top: 20vh
-}
-
-.hamburger-icon.open {
-  visibility: hidden;
-}
-
 .overlay-menu {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   background-color: rgba(0, 0, 0, 0.8); /* Semi-transparent black background */
   z-index: 1000;
-  color: rgb(9, 9, 9);
+  color: white;
 }
 
 .close-icon {
   font-size: 2em;
-  color: rgb(0, 0, 0);
+  color: white;
   cursor: pointer;
 }
 
