--- a/src/Header.css
+++ b/src/Header.css
@@ -11,18 +11,19 @@ Header {
 
 .nav-button {
   display: inline-block;
-  padding: 1vh 3vh; /* Set the height and width using viewport height (vh) */
+  padding: 1rem 1rem; /* Set the height and width using viewport height (vh) */
   text-decoration: none;
   color: rgb(8, 223, 226);
   border: none;
   border-radius: 5px;
   font-weight: bold;
-  font-size: 1em; /* Set the font size using viewport height (vh) */
+  font-size: 1rem; /* Set the font size using viewport height (vh) */
   cursor: pointer;
   transition: background-color 0.3s ease; /* Smooth transition on hover */
   font-family: "Wotfard", 'Times New Roman', Times, serif;
   color: rgb(63, 24, 24);
   letter-spacing: -1px;
+
   /* Adjust button styling as needed */
 }
 /* Hamburger menu styles for smaller screens */
@@ -36,16 +37,23 @@ Header {
   }
 }
 
-
+.toolbar{
+  display: flex;
+  padding: 1vh 1vw;
+}
 .nav-button:hover {
   color:blue
 }
 
 .githublogo{
-  width: 10vw;
-  height: auto;
+  width: 2rem;
+  height: 2rem;
+  vertical-align: middle;
+  padding: 1vh 1vw;
 }
 .linkedinlogo{
-  width: 10vw;
-  height: auto
+  width: 2rem;
+  height: 2rem;
+  vertical-align: middle;
+  padding: 1vh 1vw;
 }
