--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,12 @@
 @font-face {
   font-family: "Wotfard";
-  src: url('./wotfard-regular-webfont.eot');
+ 
   src: url('./wotfard-regular-webfont.woff2') format('woff2'),
-       url('./wotfard-regular-webfont.ttf') format('truetype');
+  
 
 }
 body {
-  background: radial-gradient( #fbf8f8, #eceef4); /* Adjust colors as needed */
+  background: #fbf8f8,; /* Adjust colors as needed */
   overflow-x: hidden;
 }
 .wrapper {
@@ -20,7 +20,7 @@ body {
   margin: 2vw;
   width: 90%;
   text-align: center;
-
+  
 }
 
 h2{
