--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,24 @@
 @font-face {
   font-family: "Wotfard";
- 
+  src: url('./wotfard-regular-webfont.eot');
   src: url('./wotfard-regular-webfont.woff2') format('woff2'),
-  
+       url('./wotfard-regular-webfont.ttf') format('truetype');
 
 }
 body {
-  background: #fbf8f8,; /* Adjust colors as needed */
+  background: radial-gradient( #fbf8f8, #eceef4); /* Adjust colors as needed */
   overflow-x: hidden;
 }
 .wrapper {
   display: grid;
-  grid-template-columns:
-    1fr
-    min(65ch, 100%)
-    1fr;
+  grid-template-columns: 1fr min(100ch, calc(100% - 30px)) 1fr;
 }
-.app-container{
-  margin: 2vw;
-  width: 90%;
-  text-align: center;
-  
+.wrapper > * {
+  grid-column: 2;
 }
+
+
+
 
 h2{
   font-family: "Wotfard", 'Times New Roman', Times, serif;
