--- a/src/HamburgerMenu.css
+++ b/src/HamburgerMenu.css
@@ -2,9 +2,8 @@
   font-size: 2em;
   color: rgb(12, 8, 8);
   cursor: pointer;
-  max-height: 20vh;
-  min-height: 10vh;
-  margin-top: 20vh
+  display: flex;
+  float: right;
 }
 
 .hamburger-icon.open {
@@ -12,15 +11,15 @@
 }
 
 .overlay-menu {
-  position: fixed;
+  position: right;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  flex-direction: right;
+  align-items: right;
+  justify-content: right;
   background-color: rgba(0, 0, 0, 0.8); /* Semi-transparent black background */
   z-index: 1000;
   color: rgb(9, 9, 9);
