--- a/src/HamburgerMenu.css
+++ b/src/HamburgerMenu.css
@@ -1,6 +1,6 @@
 .hamburger-icon {
   font-size: 2em;
-  color: rgb(12, 8, 8);
+  color: rgb(30, 35, 45);
   cursor: pointer;
   display: flex;
   float: right;
@@ -21,6 +21,7 @@
   align-items: right;
   justify-content: right;
   background-color: rgba(0, 0, 0, 0.8); /* Semi-transparent black background */
+  backdrop-filter: blur(10px);
   z-index: 1000;
   color: rgb(9, 9, 9);
 }
@@ -43,6 +44,6 @@
   font-size: 1.5em;
   margin-bottom: 10px;
   font-family: "Wotfard", 'Times New Roman', Times, serif;
-  color: rgb(241, 232, 232);
+  color: rgb(30, 35, 45);
   letter-spacing: -1px;
 }
