--- a/src/Header.css
+++ b/src/Header.css
@@ -1,13 +1,18 @@
 Header {
-  background-color: rgb(173, 104, 104);
    /* 1/8 of the viewport height */
+   display: grid;
+   grid-template-columns: 1fr auto; /* Two columns: 1 for nav-buttons, 1 for logos */
+   align-items: center;
   
+  }
 
+
+.nav-buttons{
+  display: flex;
+  justify-content: flex-start;
 }
-
-
-
 .nav-button {
+
   padding: .5rem .5rem; /* Set the height and width using viewport height (vh) */
   text-decoration: none;
   color: rgb(8, 223, 226);
@@ -18,8 +23,7 @@ Header {
   cursor: pointer;
   transition: background-color 0.3s ease; /* Smooth transition on hover */
   font-family: "Wotfard", 'Times New Roman', Times, serif;
-  color: rgb(63, 24, 24);
-  letter-spacing: -1px;
+  color: rgb(30, 35, 45);
   gap: .25rem;
 
   /* Adjust button styling as needed */
@@ -41,11 +45,11 @@ Header {
   align-items: center;
 }
 .nav-button:hover {
-  color:blue
+  color:rgb(115, 199, 25)
 }
 
 .logos{
-  
+  justify-self: end;
   gap: .5rem;
 }
 .githublogo{
