Fixed blog icon

--- a/src/BlogDropdown.css
+++ b/src/BlogDropdown.css
@@ -3,14 +3,14 @@
 .blog-dropdown {
   position: absolute;
   top: 125%; /* Adjust as needed */
-  left: 0;
+  left: 1.15rem;
   background-color: #fff; /* Dropdown background color */
   border: 1px solid #ccc; /* Border color */
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5); /* Box shadow for a subtle lift */
   z-index: 1000;
   display: grid; /* Change to grid layout */
   grid-template-columns: repeat(2, 1fr); /* Two columns with equal width */
-  grid-gap: 10px; /* Adjust as needed */
+  /*grid-gap: 10px; /* Adjust as needed */
   width: 15rem;
 }
 
@@ -33,7 +33,7 @@
   text-decoration: none;
   display: block;
   
-  border-radius: 3px;
+  border-radius: 6px;
   transition: background-color 0.3s ease;
   text-align: center; /* Center the text */
 }
